@@ -187,8 +187,9 @@ fi
 
 ###############################################################################
 %changelog
-* Wed Aug 29 2007 Michael Bauschert <michael.bauschert@de.ibm.com> 0.5.1-CVS
+* Thu Sep 13 2007 Michael Bauschert <michael.bauschert@de.ibm.com> 0.5.1-CVS
   - Inclusion of fixes for the following issues:
+    o 1793932 wbemsmt-webapp: noborder stylesheet class for main.css
     o 1784067 wbemsmt-webapp: rework admin panels
     
 * Mon Aug 27 2007 Wolfgang Taphorn <taphorn@de.ibm.com> 0.5.1-1
