@@ -1,5 +1,6 @@
 Changes on top of 0.5.1
 ==============================================================================
+- 1793932 wbemsmt-webapp: noborder stylesheet class for main.css
 - 1784067 wbemsmt-webapp: rework admin panels
 
 Changes in 0.5.1-1 :
